--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 </head>
 <body>
      <header class="container ">
-        <section >
-            <nav class="  sticky-top navbar navbar-expand-lg navbar-light bg-light">
+            <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                   <a class="navbar-brand" href="#"><img src="images/logo.png"></a>
                   <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,7 +26,7 @@
                   </div>
                 </div>
               </nav>
-        </section>
+        
 
        
         <section>
